k8s/apps/development/wirepod/namespace.k8s.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wirepod
  labels:
    pod-security.kubernetes.io/enforce: privileged
