k8s/apps/development/wirepod/deployment.k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wirepod
  namespace: wirepod
  labels:
    app.kubernetes.io/name: wirepod
    app.kubernetes.io/instance: wirepod
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: wirepod
      app.kubernetes.io/instance: wirepod
  template:
    metadata:
      labels:
        app.kubernetes.io/name: wirepod
        app.kubernetes.io/instance: wirepod
    spec:
      hostname: escapepod
      hostNetwork: true
      containers:
        - name: wirepod
          image: ghcr.io/kercre123/wire-pod:main
          ports:
            - name: wirepod
              containerPort: 8080
            - name: escapepod
              containerPort: 8084
            - name: conncheck
              containerPort: 80
          volumeMounts:
            - name: model
              mountPath: /vosk
            - name: data
              mountPath: /data
        - name: avahi
          image: docker.io/flungo/avahi@sha256:98fac3e2ed9d65cc88cd93aa873ee24f84ba9d050b2b7b0c551de3e7544182eb
          ports:
            - name: mdns
              protocol: UDP
              containerPort: 5353
          volumeMounts:
            - name: services
              mountPath: /etc/avahi/services
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: wirepod-data
        - name: model
          persistentVolumeClaim:
            claimName: wirepod-model
        - name: services
          configMap:
            name: avahi-services
