k8s/apps/development/wirepod/ingress.k8s.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/traefik.io/ingressroute_v1alpha1.json
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: wirepod
  namespace: wirepod
  labels:
    app.kubernetes.io/name: wirepod
    app.kubernetes.io/instance: wirepod
  annotations:
    kubernetes.io/ingress.class: ingress-internal-traefik
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`wirepod.${CLUSTER_DOMAIN}`)
      services:
        - name: wirepod
          namespace: wirepod
          port: wirepod
